Removes Google Guava Replaces "public-suffix-list" with crawler-commons